--- a/app/ui/add_sn_diag.ui
+++ b/app/ui/add_sn_diag.ui
@@ -7,17 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>94</height>
+    <height>72</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Add Info Dialog</string>
+   <string>Drive serial number</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="lbl_title">
+    <widget class="QLabel" name="lbl_drive_id">
      <property name="text">
-      <string>Serial number</string>
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
