--- a/app/ui/main.ui
+++ b/app/ui/main.ui
@@ -768,57 +768,21 @@ QPushButton:disabled {
          </item>
          <item>
           <layout class="QGridLayout" name="gridLayout_3">
-           <item row="1" column="3">
-            <widget class="QLineEdit" name="led_min_sw_ver_lift">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>30</height>
-              </size>
-             </property>
-             <property name="focusPolicy">
-              <enum>Qt::StrongFocus</enum>
-             </property>
-             <property name="maxLength">
-              <number>20</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="3">
+           <item row="0" column="4">
             <widget class="QLabel" name="label_8">
              <property name="text">
               <string>&lt;b&gt;Lift:&lt;/b&gt;</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QSpinBox" name="spb_max_slewing_current">
-             <property name="suffix">
-              <string> mA</string>
-             </property>
-             <property name="maximum">
-              <number>3000</number>
-             </property>
-             <property name="value">
-              <number>0</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QLabel" name="label_7">
+           <item row="4" column="4">
+            <widget class="QLabel" name="lbl_print_lbl_detection_status">
              <property name="text">
-              <string>&lt;b&gt;Slewing:&lt;/b&gt;</string>
+              <string>TextLabel</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>&lt;h4&gt;Max. current&lt;/h4&gt;</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
+           <item row="1" column="2">
             <widget class="QLineEdit" name="led_min_sw_ver_slewing">
              <property name="minimumSize">
               <size>
@@ -834,27 +798,30 @@ QPushButton:disabled {
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_6">
+           <item row="4" column="0">
+            <widget class="QLabel" name="label">
              <property name="text">
-              <string>&lt;h4&gt;Min. software version&lt;/h4&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Print label with SN:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="3">
-            <widget class="QSpinBox" name="spb_max_lift_current">
-             <property name="suffix">
-              <string> mA</string>
+           <item row="1" column="4">
+            <widget class="QLineEdit" name="led_min_sw_ver_lift">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>30</height>
+              </size>
              </property>
-             <property name="maximum">
-              <number>3000</number>
+             <property name="focusPolicy">
+              <enum>Qt::StrongFocus</enum>
              </property>
-             <property name="value">
-              <number>0</number>
+             <property name="maxLength">
+              <number>20</number>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
+           <item row="4" column="2">
             <widget class="QLineEdit" name="led_print_label_with_serial">
              <property name="minimumSize">
               <size>
@@ -867,17 +834,67 @@ QPushButton:disabled {
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_6">
              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Print label with SN:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>&lt;h4&gt;Min. software version&lt;/h4&gt;</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="3">
-            <widget class="QLabel" name="lbl_print_lbl_detection_status">
+           <item row="0" column="2">
+            <widget class="QLabel" name="label_7">
              <property name="text">
-              <string>TextLabel</string>
+              <string>&lt;b&gt;Slewing:&lt;/b&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>&lt;h4&gt;Max. current&lt;/h4&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QSpinBox" name="spb_max_slewing_current">
+             <property name="suffix">
+              <string> mA</string>
+             </property>
+             <property name="maximum">
+              <number>3000</number>
+             </property>
+             <property name="value">
+              <number>0</number>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="4">
+            <widget class="QSpinBox" name="spb_max_lift_current">
+             <property name="suffix">
+              <string> mA</string>
+             </property>
+             <property name="maximum">
+              <number>3000</number>
+             </property>
+             <property name="value">
+              <number>0</number>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>&lt;h4&gt;Blocked Current THR&lt;/h4&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QSpinBox" name="spb_blocked_current_thr_slewing">
+             <property name="suffix">
+              <string> mA</string>
+             </property>
+             <property name="maximum">
+              <number>5000</number>
              </property>
             </widget>
            </item>
@@ -921,7 +938,7 @@ QPushButton:disabled {
    </property>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>Label Printer</string>
+     <string>Edit</string>
     </property>
     <addaction name="actionSettings"/>
    </widget>
