--- a/app/ui/main.ui
+++ b/app/ui/main.ui
@@ -851,7 +851,7 @@ QPushButton:disabled {
            <item row="2" column="0">
             <widget class="QLabel" name="label_10">
              <property name="text">
-              <string>&lt;h4&gt;Max. current&lt;/h4&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h4 style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:medium; font-weight:600;&quot;&gt;Max. current &lt;/span&gt;&lt;span style=&quot; font-size:8pt; font-weight:600; font-style:italic;&quot;&gt;(normal run)&lt;/span&gt;&lt;/h4&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
@@ -884,7 +884,7 @@ QPushButton:disabled {
            <item row="3" column="0">
             <widget class="QLabel" name="label_2">
              <property name="text">
-              <string>&lt;h4&gt;Blocked Current THR&lt;/h4&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h4 style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:medium; font-weight:600;&quot;&gt;Blocked Current &lt;/span&gt;&lt;span style=&quot; font-size:medium; font-weight:600; font-style:italic;&quot;&gt;(block test)&lt;/span&gt;&lt;/h4&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
