feat: add settings repeated test active, min/max torque

--- a/app/ui/settings_diag.ui
+++ b/app/ui/settings_diag.ui
@@ -282,6 +282,20 @@
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout_5">
+       <item row="1" column="0">
+        <widget class="QCheckBox" name="cb_repeat_test">
+         <property name="text">
+          <string>Repeat Test active</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_16">
+         <property name="text">
+          <string>Min torque</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="1">
         <widget class="QSpinBox" name="sb_norm_run_slewing_duration">
          <property name="suffix">
@@ -299,6 +313,27 @@
         <widget class="QLabel" name="label_15">
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Duration Slewing &lt;span style=&quot; font-style:italic;&quot;&gt;(default=200s)&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QSpinBox" name="sb_min_torque">
+         <property name="suffix">
+          <string> Nm</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_17">
+         <property name="text">
+          <string>Max torque</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QSpinBox" name="sb_max_torque">
+         <property name="suffix">
+          <string> Nm</string>
          </property>
         </widget>
        </item>
