--- a/app/ui/main.ui
+++ b/app/ui/main.ui
@@ -1078,6 +1078,9 @@ QPushButton:disabled {
      <string>Edit</string>
     </property>
     <addaction name="actionSettings"/>
+    <addaction name="actionLabel_Printer"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
    </widget>
    <addaction name="menuEdit"/>
   </widget>
@@ -1089,6 +1092,16 @@ QPushButton:disabled {
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionLabel_Printer">
+   <property name="text">
+    <string>Label Printer</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
    </property>
   </action>
  </widget>
